# slim

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: SlimOptions.cmake
include/slim/: CMakeLists.txt  Slim.hpp
src/: CMakeLists.txt  Slim.cpp  Slim.ixx
src/core/: CMakeLists.txt  Core.ixx  Exception.hpp  Execption.cpp  NonCopyable.cpp  NonMovable.cpp  Singleton.cpp
src/utils/: Assert.hpp  Attributes.hpp  CMakeLists.txt  Execption.cpp  NonCopyable.cpp  NonMovable.cpp  Singleton.cpp  SpinLock.cpp  Utils.ixx
